--- a/src/components/common/Menu/Menu.module.css
+++ b/src/components/common/Menu/Menu.module.css
@@ -1,3 +1,25 @@
+.menu {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: 11px 0;
+    max-width: 1178px;
+    margin: 0 auto;
+    padding: 31px 10px 0px;
+}
+
+.img {
+    width: 54px;
+    height: auto;
+}
+
 .form {
     margin-left: 60px;
     max-width: 1044px;
@@ -7,7 +29,7 @@
     display: flex;
 }
 
-.input {
+.search {
     width: 100%;
     height: 50px;
     border-width: 1px;
@@ -23,7 +45,7 @@
     color: #000000;
 }
 
-.input::-webkit-input-placeholder {
+.search::-webkit-input-placeholder {
     background-color: transparent;
     color: rgba(0, 0, 0, 0.3);
     font-style: normal;
@@ -32,7 +54,7 @@
     line-height: 24px;
 }
 
-.input:-ms-input-placeholder {
+.search:-ms-input-placeholder {
     background-color: transparent;
     color: rgba(0, 0, 0, 0.3);
     font-style: normal;
@@ -41,7 +63,7 @@
     line-height: 24px;
 }
 
-.input::-ms-input-placeholder {
+.search::-ms-input-placeholder {
     background-color: transparent;
     color: rgba(0, 0, 0, 0.3);
     font-style: normal;
@@ -50,7 +72,7 @@
     line-height: 24px;
 }
 
-.input::placeholder {
+.search::placeholder {
     background-color: transparent;
     color: rgba(0, 0, 0, 0.3);
     font-style: normal;
