prog: add profile menu

--- a/src/components/common/Menu/Menu.module.css
+++ b/src/components/common/Menu/Menu.module.css
@@ -8,7 +8,6 @@
     align-items: center;
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
-    justify-content: space-between;
     padding: 11px 0;
     max-width: 1178px;
     margin: 0 auto;
@@ -18,10 +17,10 @@
 .img {
     width: 54px;
     height: auto;
+    margin-right: 60px;
 }
 
 .form {
-    margin-left: 60px;
     max-width: 1044px;
     width: 100%;
     display: -webkit-box;
@@ -81,6 +80,7 @@
     line-height: 24px;
 }
 
+.btn,
 .btnSearch {
     margin-left: 10px;
     width: 158px;
@@ -91,4 +91,9 @@
     font-size: 16px;
     line-height: 24px;
     color: #ffffff;
+}
+
+.btn {
+    width: 241px;
+    height: 50px;
 }
