prog: profile page product list

--- a/src/pages/Main/Main.module.css
+++ b/src/pages/Main/Main.module.css
@@ -19,7 +19,7 @@
     background-color: #ffffff;
 }
 
-.containerMain {
+.content {
     max-width: 1178px;
     margin: 0 auto;
     padding: 52px 10px 37px;
