--- a/src/components/product/ProductList/ProductList.module.css
+++ b/src/components/product/ProductList/ProductList.module.css
@@ -15,6 +15,12 @@
     cursor: pointer;
 }
 
+.adsImg {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
 .productImg:hover {
     border: 2px solid #009ee4;
 }
