--- a/src/pages/Adv/Adv.module.css
+++ b/src/pages/Adv/Adv.module.css
@@ -64,6 +64,12 @@
     background-color: #eceaea;
 }
 
+.bigImg,
+.smallImg {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
 .title {
     color: #000;
     font-size: 32px;
@@ -77,6 +83,7 @@
 .reviews {
     color: #5f5f5f;
     line-height: 130%;
+    padding-top: 4px;
 }
 
 .reviews {
