--- a/src/pages/SellerProfile/SellerProfile.module.css
+++ b/src/pages/SellerProfile/SellerProfile.module.css
@@ -14,6 +14,7 @@
 
 .container {
     max-width: 1440px;
+    min-height: 1200px;
     width: 100%;
     margin: 0 auto;
     background-color: #ffffff;
