feat: logout btn, access to the page reg/unreg user

--- a/src/components/modals/Reviews/Reviews.module.css
+++ b/src/components/modals/Reviews/Reviews.module.css
@@ -48,12 +48,12 @@
     font-size: 16px;
     font-weight: 600;
     line-height: 200%;
-    padding-bottom: 14px;
 }
 
 .item {
     display: flex;
     flex-direction: column;
+    gap: 14px;
 }
 
 .inputReviews {
