--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -8,6 +8,9 @@
     letter-spacing: -0.05px;
 }
 
+.btnLogout,
+.btnSave,
+.btnReview,
 .custom,
 .blue {
     background-color: #009ee4;
@@ -26,13 +29,17 @@
     opacity: 0.5;
 }
 
-.gray:hover,
+.btnLogout:hover,
+.btnSave:hover,
+.btnReview:hover,
 .custom:hover,
 .blue:hover {
     background: #0080c1;
 }
 
-.gray:active,
+.btnLogout:active,
+.btnSave:active,
+.btnReview:active,
 .custom:active,
 .blue:active {
     background-color: #0079b5;
@@ -57,7 +64,24 @@
 }
 
 .gray {
-    background: #d9d9d9;
+    cursor: default;
+    background: #b9b9b9;
     color: #fff;
     width: 181px;
+}
+
+.btnReview {
+    width: 181px;
+}
+
+.btnLogout,
+.btnSave {
+    font-size: 16px;
+    width: 154px;
+    height: 50px;
+    margin-right: 10px;
+}
+
+.btnLogout {
+    width: 225px;
 }
