--- a/src/components/modals/Reviews/Reviews.module.css
+++ b/src/components/modals/Reviews/Reviews.module.css
@@ -124,6 +124,8 @@
     color: #5f5f5f;
     font-size: 16px;
     line-height: 200%;
+    font-weight: 400;
+    margin-left: 10px;
 }
 
 .boxReview {
