--- a/src/pages/Main/Main.module.css
+++ b/src/pages/Main/Main.module.css
@@ -34,3 +34,15 @@
     color: #000000;
     margin-bottom: 30px;
 }
+
+@media (max-width: 767px) {
+    .content {
+        padding: 85px 18px 0;
+    }
+
+    .title {
+        font-size: 24px;
+        line-height: 120%;
+        margin-bottom: 20px;
+    }
+}
