--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -108,4 +108,14 @@
     .blue {
         margin-top: 40px;
     }
+    .btnSave {
+        margin-top: 30px;
+    }
+    .btnSave,
+    .btnLogout {
+        width: 100%;
+        height: 46px;
+        font-size: 16px;
+        font-weight: 400;
+    }
 }
